fix: header width overflows on mobile

--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -205,7 +205,6 @@ footer a:hover {
         top: 0;
         background-color: #FFDDDD;
         padding: 1%;
-        width: 100%;
         margin: 0 0;
         box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
     }
